--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,21 +14,20 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/linearLayout1">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:elevation="10dp"
-                android:background="#fff"
-                android:id="@+id/relLayout1">
+                android:background="@drawable/curved_toolbar"
+                android:id="@+id/relLayout1"
+                android:orientation="vertical">
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:id="@+id/toolbar"
-                    android:background="@color/common_google_signin_btn_text_dark_default"
-                    />
+                    android:id="@+id/toolbar"/>
                 <ProgressBar
                     android:layout_width="match_parent"
                     android:id="@+id/progress_bar"
@@ -37,7 +36,7 @@
                     android:layout_marginTop="-7dp"
                     android:layout_marginBottom="-7dp"
                     />
-            </RelativeLayout>
+            </LinearLayout>
             <ViewAnimator
                 android:id="@+id/view_animator"
                 android:layout_width="match_parent"
