--- a/app/src/main/res/layout/activity_facility_detail.xml
+++ b/app/src/main/res/layout/activity_facility_detail.xml
@@ -55,7 +55,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#00f"
+                        android:background="@color/red"
                         android:orientation="vertical">
 
                         <TextView
@@ -155,7 +155,7 @@
                         android:layout_height="50dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-                        android:background="#359ab9"
+                        android:background="@color/red_dark"
                         android:gravity="center"
                         android:orientation="horizontal">
 
