--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -119,6 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter"
+        android:layout_marginTop="10dp"
         android:text="@string/registration_prompt"
 
         android:textColor="@color/red_dark"
