--- a/app/src/main/res/layout/activity_facility_detail.xml
+++ b/app/src/main/res/layout/activity_facility_detail.xml
@@ -64,6 +64,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="left"
                             android:padding="10dp"
+                            android:textStyle="bold"
                             android:text="@string/facility_place_name"
                             android:textColor="#fff"
                             android:textSize="18sp" />
@@ -130,7 +131,8 @@
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
                                 android:padding="5dp"
-                                android:text="Availability: "
+                                android:text="@string/availability"
+                                android:textStyle="bold"
                                 android:textColor="#fff"
                                 android:textSize="14sp" />
 
