--- a/app/src/main/res/layout/fragment_nearby_facilities_list_list.xml
+++ b/app/src/main/res/layout/fragment_nearby_facilities_list_list.xml
@@ -9,5 +9,5 @@
     android:layout_gravity="bottom"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingBottom="@dimen/list_item_spacing_half"
-    tools:context=".NearbyFacilitiesListFragment"
+    tools:context=".views.NearbyFacilitiesListFragment"
     tools:listitem="@layout/fragment_nearby_facilities_list_list_item"/>
