--- a/app/src/main/res/layout/fragment_nearby_facilities_list_list_item.xml
+++ b/app/src/main/res/layout/fragment_nearby_facilities_list_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="3dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="3dp"
-        app:cardBackgroundColor="@color/red"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="30dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="0dp"
@@ -51,7 +51,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/place_name"
-                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textColor="@color/red_dark"
                     android:textSize="16sp" />
 
                 <LinearLayout
@@ -72,8 +73,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textColor="@color/white"
+                        android:textColor="@color/red_dark"
                         android:text="@string/address"
+                        android:textStyle="bold"
                         android:textSize="13sp" />
 
                 </LinearLayout>
@@ -100,7 +102,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white" />
+                    android:background="@color/red_dark" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="70dp"
@@ -111,10 +113,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Details"
-                    android:textColor="@color/white"
+                    android:text="@string/details"
+                    android:textColor="@color/red_dark"
                     android:background="@drawable/login_button"
-                    android:textSize="16sp"/>
+                    android:backgroundTint="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="13sp"/>
 
             </LinearLayout>
 
